--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               Вес может достигать 12 кг, а длина 1 м
             </li>
             <li class="breed-features__item breed-features__item--appearance">
-              Внешний вид этой кошки похож на дикую рысь
+              Внешний вид этой кошки похож на дикую рысь.
             </li>
           </ul>
         </div>
